header,hero完成、productsのタイトル完成

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <button class="btn-danger">Let's Play</button>
             </div>
 
-            <div class="match">
+            <div class="match fadeOut">
                 <h2 class="winner">Choose an option</h2>
                 <div class="hands">
                     <img class="player-hand" src="img/rock.png" alt="">
