製品一覧の大まかな見た目整えた

--- a/EC/ec.html
+++ b/EC/ec.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -42,7 +42,43 @@
     <section class="products">
         <div class="container">
             <h1>Our Items</h1>
-            
+            <ul class="mt-3">
+                <li>
+                    <a href="#">
+                        <img class="w-100" src="../MyECSite/img/pic1.png" alt="家具">
+                        <h2 class="mt-2">家具</h2>
+                        <p>20000円</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img class="w-100" src="../MyECSite/img/pic2.png" alt="家具">
+                        <h2 class="mt-2">家具</h2>
+                        <p>20000円</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img class="w-100" src="../MyECSite/img/pic3.png" alt="家具">
+                        <h2 class="mt-2">家具</h2>
+                        <p>20000円</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img class="w-100" src="../MyECSite/img/pic4.png" alt="家具">
+                        <h2 class="mt-2">家具</h2>
+                        <p>20000円</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img class="w-100" src="../MyECSite/img/pic5.png" alt="家具">
+                        <h2 class="mt-2">家具</h2>
+                        <p>20000円</p>
+                    </a>
+                </li>
+            </ul>
         </div>
     </section>
     
