--- a/EC/ec.html
+++ b/EC/ec.html
@@ -79,6 +79,7 @@
                     </a>
                 </li>
             </ul>
+            <a href="#" class="more">もっと見る</a>
         </div>
     </section>
     
